src/bugzillaintegration/reportassistantdialog.cpp
@@ -391,7 +391,8 @@ void ReportAssistantDialog::closeEvent(QCloseEvent * event)
                 event->accept();
             } else if (ret == KMessageBox::No) {
                 //Save backtrace and accept event (dialog will be closed)
-                DrKonqi::saveReport(reportInterface()->generateReportFullText(false));
+                DrKonqi::saveReport(reportInterface()->generateReportFullText(ReportInterface::DrKonqiStamp::Exclude,
+                                                                              ReportInterface::Backtrace::Complete));
                 event->accept();
             } else {
                 event->ignore();
